crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__nodes_error.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (ERROR) @err
---
[strings]
S0 "Beauty will save the world"
S1 "err"
S2 "Test"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { err }

[type_members]
M0: S1 → T0  ; err: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 6 :: T1

[transitions]
_ObjWrap:
  0  -ε-  [Obj]                             2
  2       Trampoline                        3
  3  -ε-  [EndObj]                          5
  5                                         ▶

Test:
  6   !   (_) [Node Set(M0)]                8
  8                                         ▶
