crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__nodes_named.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (identifier) @id
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }

[type_members]
M0: S1 → T0  ; id: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 6 :: T1

[transitions]
_ObjWrap:
  0  -ε-  [Obj]                             2
  2       Trampoline                        3
  3  -ε-  [EndObj]                          5
  5                                         ▶

Test:
  6   !   (identifier) [Node Set(M0)]       8
  8                                         ▶
