crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__opt_prefix_collapse.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = [(object (pair)) (object (string))]
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "object"
S3 "pair"
S4 "string"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   08
  07  ...  
  08   !   (object)                         10, 12
  10  └‣─  (pair)                           11
  11  ─‣┘  _                                14
  12  └‣─  (string)                         13
  13  ─‣┘  _                                14
  14                                        ▶
