crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__optional_first_child_then_strict_interior_anchor.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (program {(lexical_declaration)? @a .! (debugger_statement) @b})
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "Test"
S4 "program"
S5 "lexical_declaration"
S6 "debugger_statement"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; a: T2
M1: S2 → T0  ; b: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        18, 09
  08                                        ▶
  09  └─!  [Null Set(M0)] (debugger_statement) [Node Set(M1)]  20
  12  ──!  (debugger_statement) [Node Set(M1)]  20
  14   !   (lexical_declaration) [Node Set(M0)]  12
  16  ─‣─  _                                14, 16
  18  └‣─  _                                14, 16
  20  ─‣┘  _                                08
